<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_row2_hgt"
        android:background="?attr/cardBackgroundColor"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/lib_pad_btn"
            android:paddingRight="@dimen/lib_pad_btn"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/lib_pad_ver"
                android:paddingRight="@dimen/lib_pad_ver"
                android:textAppearance="@style/TxtLab"
                android:text="@string/ini_flow"
                />

            <Spinner
                android:id="@+id/spn_flw"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:entries="@array/ptx_flw"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btn_cach"
            android:layout_width="0dp"
            android:layout_height="@dimen/lib_lin_hgt"
            android:layout_weight="1"
            android:background="?attr/cardBackgroundColor"
            android:textColor="@color/acc_col"
            android:text="@string/clr_cach"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/lib_pad_ver"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_row2_hgt"
        android:background="?attr/cardBackgroundColor"
        android:gravity="center_vertical"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btn_mod"
            android:layout_width="0dp"
            android:layout_height="@dimen/lib_lin_hgt"
            android:layout_weight="1"
            android:background="?attr/cardBackgroundColor"
            android:textColor="@color/acc_col"
            android:text="@string/emu_ptx"
            style="@style/Widget.AppCompat.Button.Borderless"
        />
        <Button
            android:id="@+id/btn_test"
            android:layout_width="0dp"
            android:layout_height="@dimen/lib_lin_hgt"
            android:layout_weight="1"
            android:background="?attr/cardBackgroundColor"
            android:textColor="@color/acc_col"
            android:text="@string/plg_fst"
            style="@style/Widget.AppCompat.Button.Borderless"
        />
    </LinearLayout>
</LinearLayout>