<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_row2_hgt"
        android:background="?attr/cardBackgroundColor"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/lib_pad_btn"
            android:paddingRight="@dimen/lib_pad_btn"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/lib_pad_ver"
                android:paddingRight="@dimen/lib_pad_ver"
                android:textAppearance="@style/TxtLab"
                android:text="@string/tst_dir"
            />
            <Spinner
                android:id="@+id/spn_dir"
                android:layout_width="match_parent"
                android:layout_height="44dp"
            />
        </LinearLayout>
        <Button
            android:id="@+id/btn_ath"
            android:layout_width="0dp"
            android:layout_height="@dimen/lib_lin_hgt"
            android:layout_weight="1"
            android:background="?attr/cardBackgroundColor"
            android:textColor="@color/wpc_acc"
            android:text="Check"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/lib_row2_hgt"
        android:background="?attr/cardBackgroundColor"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:baselineAligned="false"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/lib_pad_btn"
            android:paddingRight="@dimen/lib_pad_btn"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/lib_pad_ver"
                android:paddingRight="@dimen/lib_pad_ver"
                android:textAppearance="@style/TxtLab"
                android:text="@string/tst_req"
            />
            <Spinner
                android:id="@+id/spn_req"
                android:layout_width="match_parent"
                android:layout_height="44dp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="@dimen/lib_pad_btn"
            android:paddingRight="@dimen/lib_pad_btn"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/lib_pad_ver"
                android:paddingRight="@dimen/lib_pad_ver"
                android:textAppearance="@style/TxtLab"
                android:text="@string/tst_res"
            />
            <Spinner
                android:id="@+id/spn_res"
                android:layout_width="match_parent"
                android:layout_height="44dp"
            />
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:longClickable="true"
        android:divider="@null"
        android:paddingTop="@dimen/lib_pad_ver"
        android:paddingLeft="@dimen/lib_pad_ver"
        />
</LinearLayout>